--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </table>
   <hr>
   <a href="HOBBIES.html">my hobbies</a>
-  <a href="C:\Users\sindh\OneDrive\Desktop\web development\HTML-Personal site\contact me.html">contact me</a>
+  <a href="contact me.html">contact me</a>
   <hr>
 </body>
 
