--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="IMAGES/e1b65352-2a56-4f97-833f-0cacb0c740d4%20(2).jpg" alt="AGV" height="350" width="350"></td>
+      <td><img src="IMAGES\e1b65352-2a56-4f97-833f-0cacb0c740d4 (2)-modified.png" alt="AGV" height="350" width="350"></td>
       <td>
         <h1>GAUTHAM A</h1>
         <p><em>STUDENT AT <STRONG><a href="https://www.acharya.ac.in/">AIT BANGALORE</a></STRONG></em></p>
@@ -21,27 +21,27 @@
   <h3>PROJECTS</h3>
   <ul>
     <li>ONLINE VOTING SYSTEM</li>
-    <li>ALRAM APP </li>
+    <li>ALRAM APPLICATIONS </li>
     <li>LOAN PREDICTION</li>
   </ul>
   <hr>
-  <h3>work experiecne</h3>
+  <h3>MY COURSE/INTERNSHIP</h3>
   <table cellspacing="20">
     <thead>
       <tr>
         <th> Date </th>
-        <th> Work </th>
+        <th> TOPIC </th>
       </tr>
     </thead>
     <tr>
-      <td>2019-20</td>
+      <td>DEC/21-FEB/21</td>
       <td>
-         playing pubg
+         Web development Bootcamp udemy
       </td>
     </tr>
     <tr>
-      <td>2020-21</td>
-      <td>journey to acharya institute</td>
+      <td>SEP/21-OCT/21</td>
+      <td>Internship on loan prediction using ML with python</td>
     </tr>
   </table>
   <hr />
@@ -51,7 +51,7 @@
           <td> c++ </td>
           <td> ⭐⭐⭐⭐ </td>
           <td> html </td>
-          <td> ⭐⭐⭐⭐⭐ </td>
+          <td> ⭐⭐⭐⭐ </td>
         </tr>
         <tr>
           <td> java </td>
