ADD NEW CV WEBSITE FILES

--- a/contact me.html
+++ b/contact me.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>my contact details</h1>
-    <p> address </p>
-    <p> 7259372612 </p>
+    <p> BANGALORE </p>
+    <p> 72593726 </p>
     <p>goutham1209@gmail.com</p>
     <hr>
     <form action="mailto:goutham01209@gmail.com" method="post" enctype="text/plain">
